# KeyboardOptimizer-LayoutGen-3000

./: Cargo.toml  README.md  abcABC.json  petersen.json  sudoku.py
src/: main.rs
src/algorithm/: .#tabu_search.rs  generator.rs  mod.rs  population.rs  scatter_search.rs  tabu_search.rs
src/cat/: bag.rs  composed.rs  domain.rs  enumerator.rs  example.rs  has_count.rs  hash_mapping.rs  mapping.rs  mod.rs  num.rs  ops.rs  product.rs  seq.rs  seq_table.rs  subset.rs  table.rs  types.rs  universe.rs
src/data/: corpus.rs  countable.rs  domain_walker.rs  kb_conf.rs  kb_def.rs  keymap.rs  lt_conf.rs  mod.rs  parser.rs  path_costs.rs  restricted_range.rs  score_tree.rs  types.rs
src/eval/: evaluator.rs  mod.rs  ngram_eval.rs  ngram_eval.rs_  score_tree_eval.rs  scored.rs  traverser.rs  walker.rs
src/heuristics/: cache.rs  mod.rs  tabu_search.rs  traverser.rs  walker.rs
src/json/: config.rs  config_reader.rs  domain.rs  elements.rs  eval.rs  groups.rs  keymap.rs  mod.rs  reader.rs  utils.rs
src/layout/: alteration.rs  assignable.rs  assignment.rs  assignment_map.rs  assignment_resolver.rs  assignment_table.rs  combinator.rs  generator.rs  group_map_walker.rs  keymap.rs  layout.rs  maps.rs  mod.rs  move_gen.rs  swap.rs  utils.rs
src/model/: groups.rs  kb_def.rs  key_masks.rs  language.rs  loc.rs  lock.rs  lt_conf.rs  mod.rs  path_table.rs  tokens.rs
src/operations/: analyze.rs  mod.rs  operation.rs  optimize.rs
src/parser/: kb_parser.rs  keymap.rs  language.rs  loc.rs  mod.rs  parser.rs  path_table.rs
src/serialize/: num.rs
src/utils/: bag.rs  bag_table.rs  (+15 more)
(+23 files in other folders)
