[package]
name = "keyboard_optimizer_layoutgen"
version = "3000.0.0"
authors = ["Ilion Iasoon Beyst"]

[dependencies]
rand = "0.7.3"
rand_distr = "0.3.0"
failure = "0.1.3"
byteorder = "1"

serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0"

[dev-dependencies]
proptest = "0.10.1"

[profile.release]
debug = true
